--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ button > img {
 }
 
 /* --------learn-------- */
-#learn  {
+#learn,#ressources  {
     background-image: url("assets/background-blue.png");
     background-size: 28px;
     background-repeat: repeat;
@@ -147,6 +147,7 @@ button > img {
     flex-direction: column;
     align-items: center;
 }
+
 #learn h1 {
     font-size: 58px;
     text-align: center;
@@ -189,13 +190,16 @@ button > img {
     flex-direction: column;
     align-items: center;
 }
-#cours h1 {
+#cours h1, #ressources h1 {
     font-size: 72px;
     font-weight: bolder;
 }
-#cours h2 {
+#cours h2, #ressources h2 {
     font-size: 42px;
     font-weight: 500;
+}
+#cours a {
+    background: none;
 }
 #cours .see-courses {
     color: var(--white);
@@ -254,4 +258,34 @@ button > img {
     border-radius: 16px;
     font-size: 12px;
 
+}
+
+/* --------ressources-------- */
+.card-ressource img {
+    width: 108px;
+}
+
+/* --------ressources END-------- */
+
+
+/* bubble message */
+.message {
+    position: fixed;
+    bottom: 10%;
+    right: 5%;
+    opacity: .7;
+}
+.message:hover {
+    opacity: 1;
+}
+#circle {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: var(--grey);
+    display: flex;
+    padding: 20px;
+}
+.message img {
+    transform: rotate(-30deg);
 }
