--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     /* colors */
     --black: #0A0B0A;
     --green: #7ED957;
+    --dark-green: #29AE60;
     --white: #FFFFFF;
     --grey: #A6A6A6;
     --red: #E84B3B;
@@ -23,7 +24,18 @@
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
+      box-sizing: border-box;
+    }
+*, *:before, *:after {
+      box-sizing: inherit;
+}
+/* ul > li */
+ul {
+    padding-left: 0;
+}
+li {
+    list-style: none;
 }
 /* all links a */
 a {
@@ -348,25 +360,78 @@ svg {
     
 }
 
+/* carrousel */
 .carrousel {
     display: flex;
 }
-.carrousel .carrousel-images-blog img {
+#slider img {
+  max-width: 100%;
+  width: 600px;
+  display: none;
+}
+#slider img.active, .counter-courses.active {
+  display: block;
+  animation: fade 0.8s;
+}
+/* .carrousel .carrousel-images-blog img {
     width: 348px;
     margin: 32px;
-}
+} */
 
-.arrow-left {
+.slide-arrow-left {
     transform: rotate(90deg);
     width: 72px;
     
     
 }
-.arrow-right {
+.slide-arrow-right {
     transform: rotate(-90deg);
     width: 72px;
     
 }
+/* slider images */
+/* 
+button{
+  margin: 0;
+  padding: 0;
+  background: none;
+  border: none;
+  border-radius: 0;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+#slider{
+width: 300px;
+margin: 0 auto;
+}
+#slider img{
+width: 100%;
+}
+.slide-img{
+  position: absolute;
+  top: 50%;
+  margin-top: -15px;
+}
+.prev-arrow{
+  left: -40px;
+  width: 0;
+  height: 0;
+  border-left: 0 solid transparent;
+  border-right: 15px solid var(--white);
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+.next-arrow{
+  right: -40px;
+  width: 0;
+  height: 0;
+  border-right: 0 solid transparent;
+  border-left: 15px solid var(--white);
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+} */
 /* --------blog END-------- */
 
 /* --------footer-------- */
@@ -488,7 +553,23 @@ svg {
 }
 /* toggle presentation card */
 .border-card {
-    border: #7ED957 solid 20px;
+    border: var(--dark-green) solid 20px;
+/* box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); */
+/* box-shadow: 0 0 15px rgba(36, 181, 82, 0.2); */
+
+}
+
+/* counter-courses */
+.counter-courses {
+    display: none;
+    /* border: var(--black) solid 2px; */
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 8px;
+    padding: 10px 40px;
+    margin-bottom: 56px;
+}
+.counter-courses p {
+    font-size: 28px;
 }
 
 /* btn-pay */
